--- a/themes/netlify-basic/layouts/_default/baseof.html
+++ b/themes/netlify-basic/layouts/_default/baseof.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-    {{- partial "head.html" . -}}
-    <body>
-        {{- partial "header.html" . -}}
-        <div id="content">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css">
+        {{ $title := print .Site.Title " | " .Title }}
+        {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
+        <title>{{ $title }}</title>
+      </head>
+      <body>
         {{- block "main" . }}{{- end }}
-        </div>
-        {{- partial "footer.html" . -}}
     </body>
 </html>
